# goals-microservice

./: .env  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  controller_example.py  credentials.py  main.py  services.py  urls.py
app/auth/: auth_bearer.py  auth_utils.py
app/config/: config.py
app/models/: challenge.py  goal.py
app/routes/: challenge.py  goal.py  goal_crud.py  goal_states.py  urls.py
app/services/: services.py
datadog-config/: datadog.yaml
tests/app/: test_goal_crud.py  test_goal_states.py
